--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "amazoneclone",
+  "rnpm": {"assets": ["./src/fonts"]},
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,9 +11,15 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "react": "17.0.2",
     "react-native": "0.67.3",
-    "react-native-vector-icons": "^9.1.0"
+    "react-native-elements": "^3.4.2",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-svg": "^12.3.0",
+    "react-native-vector-icons": "^9.1.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -21,6 +28,7 @@
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.66.15",
     "@types/react-test-renderer": "^17.0.1",
+    "@types/styled-components": "^5.1.24",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
     "babel-jest": "^26.6.3",
