--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "amazoneclone",
-  "rnpm": {"assets": ["./src/fonts"]},
+  "rnpm": {
+    "assets": [
+      "./src/fonts"
+    ]
+  },
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -13,18 +17,23 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@react-navigation/native-stack": "^6.6.1",
     "react": "17.0.2",
     "react-native": "0.67.3",
     "react-native-elements": "^3.4.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-safe-area-context": "^4.2.4",
+    "react-native-screens": "^3.13.1",
     "react-native-svg": "^12.3.0",
     "react-native-vector-icons": "^9.1.0",
-    "styled-components": "^5.3.5"
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@babel/plugin-transform-named-capturing-groups-regex": "^7.16.8",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@react-navigation/native": "^6.0.10",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.66.15",
     "@types/react-test-renderer": "^17.0.1",
