--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native-stack": "^6.6.1",
     "react": "17.0.2",
     "react-native": "0.67.3",
@@ -26,7 +27,8 @@
     "react-native-screens": "^3.13.1",
     "react-native-svg": "^12.3.0",
     "react-native-vector-icons": "^9.1.0",
-    "react-navigation-stack": "^2.10.4"
+    "react-navigation-stack": "^2.10.4",
+    "react-number-format": "^4.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
