--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react-native-elements": "^3.4.2",
     "react-native-image-crop-picker": "^0.37.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-modal-datetime-picker": "^13.1.2",
+    "react-native-paper": "^4.12.0",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
     "react-native-svg": "^12.3.0",
