--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/datetimepicker": "^6.1.2",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native-stack": "^6.6.1",
+    "@twotalltotems/react-native-otp-input": "^1.3.11",
     "axios": "^0.26.1",
     "react": "17.0.2",
     "react-native": "0.67.3",
@@ -33,6 +35,7 @@
     "react-native-screens": "^3.13.1",
     "react-native-svg": "^12.3.0",
     "react-native-vector-icons": "^9.1.0",
+    "react-native-virtual-keyboard": "^1.2.0",
     "react-navigation-stack": "^2.10.4",
     "react-number-format": "^4.9.1"
   },
