--- a/ios/Podfile
+++ b/ios/Podfile
@@ -2,29 +2,25 @@ require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
 platform :ios, '11.0'
-
-target 'Misao' do
+target 'misao' do
   config = use_native_modules!
+  use_modular_headers!
 
   use_react_native!(
     :path => config[:reactNativePath],
     # to enable hermes on iOS, change `false` to `true` and then install pods
     :hermes_enabled => false
   )
-
-  target 'MisaoTests' do
-    inherit! :complete
-    # Pods for testing
-  end
+  pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec', :modular_headers => false
+  # pod 'react-native-camera', path: '../node_modules/react-native-camera'
 
   # Enables Flipper.
   #
-  # Note that if you have use_frameworks! enabled, Flipper will not work and
+  # Note that if you have use_frameworks! enabled, Flipper will not work and 
   # you should disable the next line.
-  use_flipper!()
+  # use_flipper!()
 
   post_install do |installer|
     react_native_post_install(installer)
-    __apply_Xcode_12_5_M1_post_install_workaround(installer)
   end
 end
