--- a/ios/misao.xcodeproj/xcshareddata/xcschemes/misao.xcscheme
+++ b/ios/misao.xcodeproj/xcshareddata/xcschemes/misao.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "AmazoneClone.app"
-               BlueprintName = "AmazoneClone"
-               ReferencedContainer = "container:AmazoneClone.xcodeproj">
+               BuildableName = "misao.app"
+               BlueprintName = "misao"
+               ReferencedContainer = "container:misao.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "AmazoneCloneTests.xctest"
-               BlueprintName = "AmazoneCloneTests"
-               ReferencedContainer = "container:AmazoneClone.xcodeproj">
+               BuildableName = "misaoTests.xctest"
+               BlueprintName = "misaoTests"
+               ReferencedContainer = "container:misao.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "AmazoneClone.app"
-            BlueprintName = "AmazoneClone"
-            ReferencedContainer = "container:AmazoneClone.xcodeproj">
+            BuildableName = "misao.app"
+            BlueprintName = "misao"
+            ReferencedContainer = "container:misao.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "AmazoneClone.app"
-            BlueprintName = "AmazoneClone"
-            ReferencedContainer = "container:AmazoneClone.xcodeproj">
+            BuildableName = "misao.app"
+            BlueprintName = "misao"
+            ReferencedContainer = "container:misao.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
