--- a/package.json
+++ b/package.json
@@ -17,16 +17,20 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@react-native-async-storage/async-storage": "^1.17.3",
     "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/datetimepicker": "^6.1.2",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native-stack": "^6.6.1",
+    "@reduxjs/toolkit": "^1.8.1",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
-    "axios": "^0.26.1",
+    "axios": "^0.27.2",
+    "moment": "^2.29.3",
     "react": "17.0.2",
     "react-native": "0.67.3",
     "react-native-actionsheet": "^2.4.2",
     "react-native-elements": "^3.4.2",
+    "react-native-get-random-values": "^1.8.0",
     "react-native-image-crop-picker": "^0.37.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal-datetime-picker": "^13.1.2",
@@ -37,7 +41,14 @@
     "react-native-vector-icons": "^9.1.0",
     "react-native-virtual-keyboard": "^1.2.0",
     "react-navigation-stack": "^2.10.4",
-    "react-number-format": "^4.9.1"
+    "react-number-format": "^4.9.1",
+    "react-redux": "^8.0.1",
+    "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
+    "reselect": "^4.1.5",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
