--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "@reduxjs/toolkit": "^1.8.1",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
     "axios": "^0.27.2",
+    "intl": "^1.2.5",
     "moment": "^2.29.3",
     "react": "17.0.2",
     "react-native": "0.67.3",
     "react-native-actionsheet": "^2.4.2",
     "react-native-elements": "^3.4.2",
+    "react-native-fast-image": "^8.5.11",
     "react-native-get-random-values": "^1.8.0",
     "react-native-image-crop-picker": "^0.37.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
