add api add product

--- a/ios/misao/Info.plist
+++ b/ios/misao/Info.plist
@@ -26,6 +26,8 @@
 	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
 		<key>NSExceptionDomains</key>
 		<dict>
 			<key>localhost</key>
@@ -82,5 +84,12 @@
 		<string>EBGaramond-Italic-VariableFont_wght.ttf</string>
 		<string>EBGaramond-VariableFont_wght.ttf</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string></string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string></string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string></string>
+	
 </dict>
 </plist>
