--- a/android/build.gradle
+++ b/android/build.gradle
@@ -38,5 +38,10 @@ allprojects {
         }
         google()
         maven { url 'https://www.jitpack.io' }
+
+         // ADD THIS
+        maven { url 'https://maven.google.com' }
+
+      
     }
 }
