--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "react-native-svg": "^12.3.0",
     "react-native-vector-icons": "^9.1.0",
     "react-native-virtual-keyboard": "^1.2.0",
-    "react-navigation-stack": "^2.10.4",
+    "react-navigation-stack": "react-navigation/stack",
     "react-number-format": "^4.9.1",
     "react-redux": "^8.0.1",
     "redux": "^4.2.0",
