--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "17.0.2",
     "react-native": "0.67.3",
     "react-native-actionsheet": "^2.4.2",
+    "react-native-confirmation-code-field": "^7.3.0",
     "react-native-elements": "^3.4.2",
     "react-native-fast-image": "^8.5.11",
     "react-native-get-random-values": "^1.8.0",
