--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@twotalltotems/react-native-otp-input": "^1.3.11",
     "axios": "^0.27.2",
     "intl": "^1.2.5",
+    "moment": "^2.29.3",
     "react": "17.0.2",
     "react-native": "0.67.3",
     "react-native-actionsheet": "^2.4.2",
