--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@twotalltotems/react-native-otp-input": "^1.3.11",
     "axios": "^0.27.2",
     "intl": "^1.2.5",
+    "lodash": "^4.17.21",
     "moment": "^2.29.3",
     "react": "17.0.2",
     "react-native": "0.67.3",
@@ -49,6 +50,9 @@
     "react-navigation-stack": "^2.10.4",
     "react-number-format": "^4.9.1",
     "react-redux": "^8.0.1",
+    "reactotron-react-native": "^5.0.3",
+    "reactotron-redux": "^3.1.3",
+    "reactotron-redux-saga": "^4.2.3",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
