--- a/ios/misao/Info.plist
+++ b/ios/misao/Info.plist
@@ -83,13 +83,11 @@
 		<string>EBGaramond-Bold.ttf</string>
 		<string>EBGaramond-Italic-VariableFont_wght.ttf</string>
 		<string>EBGaramond-VariableFont_wght.ttf</string>
+		<string>PressStart2P-Regular.ttf</string>
 	</array>
 	<key>NSCameraUsageDescription</key>
-	<string></string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string></string>
-	
+	<string/>
 </dict>
 </plist>
